--- a/srcMyCoreApp/main/default/classes/DevTracker.cls
+++ b/srcMyCoreApp/main/default/classes/DevTracker.cls
@@ -1,6 +1,6 @@
 public class DevTracker {
     public static Account setDefaultDescription(Account a) {
-        a.Description = 'Default description';
+        a.Description = 'Default Test description';
         return a;
     }
 }
