US-0000046 AccountAutomations Dev2

--- a/srcMyCoreApp/main/default/classes/AccountAutomationsTest.cls
+++ b/srcMyCoreApp/main/default/classes/AccountAutomationsTest.cls
@@ -42,5 +42,5 @@ private class AccountAutomationsTest {
         acc = AccountAutomations.setDefaultURL(acc);
         System.assertEquals('www.copado.com', acc.Website, 'Default website is www.copado.com');
     }
-
+  // comment
 }
